src/components/letterCard/LetterCard.module.scss
.cardWrapper {
  border: 0.25rem solid var(--color-dark-dark);
  background-color: var(--color-semi-dark-dark);
  color: white;
  padding: 1rem;
  border-radius: 0.5rem;
  height: 0.5rem;
  width: 0.5rem;
  font-size: 1.5rem;
  line-height: 1.5rem;

  @media screen and (min-width: 40rem) {
    height: 1rem;
    width: 1rem;
    font-size: 2rem;
    line-height: 2rem;
  }

  font-weight: 500;
  display: flex;
  justify-content: center;
  align-items: center;
  &.correctPosition {
    border: 0.25rem solid var(--color-green-dark);
    background-color: var(--color-green);
  }
  &.correctLetter {
    border: 0.25rem solid var(--color-yellow-dark);
    background-color: var(--color-yellow);
  }
  &.wrongLetter {
    border: 0.25rem solid var(--color-red-dark);
    background-color: var(--color-red);
  }
  &.submitted {
    border: 0.25rem solid var(--color-purple-dark);
    background-color: var(--color-purple);
  }
}

